# rust-juce-gain-example

./: .clang-format  CMakeLists.txt  Cargo.toml  README.md  build.rs
.github/workflows/: macos.yml
cpp/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
include/: gain.h
scripts/: build.mjs  setup-juce.mjs
src/: juce.rs  lib.rs
